--- a/package.json
+++ b/package.json
@@ -1,12 +1,29 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Backend aplication created on Next Level Week eSports event.",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "dev": "tsnd src/server.ts"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Gusta-snt/NLW_eSports-server.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Gustavo Ferreira dos Santos",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Gusta-snt/NLW_eSports-server/issues"
+  },
+  "homepage": "https://github.com/Gusta-snt/NLW_eSports-server#readme",
+  "dependencies": {
+    "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.3"
+  }
 }
